--- a/chapter4_solution.ipynb
+++ b/chapter4_solution.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,76 @@
     "\n",
     "print(\"(a). m =\", vigenere_decrypt(\"rsghz bmcxt dvfsq hnigq xrnbm pdnsq smbtr ku\", \"condiment\"))\n",
     "print(\"(b). m =\", vigenere_decrypt(\"khfeq ymsci etcsi gjvpw ffbsq moapx zcsfx epsox yenpk daicx cebsm ttptx zooeq laflg kipoc zswqm taujw ghboh vrjtq hu\", \"rabbithole\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mgodt beida psgls akowu hxukc iawlr csoyh prtrt udrqh cengx uuqtu habxw dgkie ktsnp sekld zlvnh wefss glzrn peaoy lbyig uaafv eqgjo ewabz saawl rzjpv feyky gylwu btlyd kroec bpfvt psgki puxfb uxfuq cvymy okagl sactt uwlrx psgiy ytpsf rjfuw igxhr oyazd rakce dxeyr pdobr buehr uwcue ekfic zehrq ijezr xsyor tcylf egcy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a)\n",
+    "| Triagram     | Appears at places | Differences |\n",
+    "| ----------- | ----------- | -------- |\n",
+    "| psg | 11, 151, 186 | 140 = 2<sup>2</sup> . 5 . 7 ; 35 = 5 . 7 |\n",
+    "| sgl | 12, 85 |  73 = 73 |\n",
+    "| gls | 13, 174 | 161 = 7 . 23 |\n",
+    "| lsa | 14, 175 | 161 = 7 . 23 |\n",
+    "| awl | 27, 118 | 91 = 7 . 13 |\n",
+    "| wlr | 28, 119, 182 | 91 = 7 . 13 ; 63 = 3<sup>2</sup> . 7 |\n",
+    "| gki | 62, 153 | 91 = 7 . 13 |\n",
+    "\n",
+    "Mọi giá trị khác nhau trong cột cuối đều chia hết cho 7 trừ triplet `sgl` &rarr; dự đoán độ dài khoá là 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) Xét chuỗi $s=c_1c_2...c_n$ ta có công thức tính **Individual Indices of Coincidence** $=\\displaystyle\\frac{1}{n(n-1)\\sum_{i=0}^{25}(F_i(F_i - 1))}$ với $F_i$ là số lượng xuất hiện kí tự $i$ trong alphabet trong chuỗi\n",
+    "| Key Length | Average Index | Individual Indices of Coincidence |\n",
+    "| ---------- | ------------- | --------------------------------- |\n",
+    "| 4 | 0.042 | 0.038; 0.043; 0.042; 0.046 |\n",
+    "| 5 | 0.044 | 0.048; 0.052; 0.046; 0.031; 0.041 |\n",
+    "| 6 | 0.042 | 0.036; 0.050; 0.042; 0.051; 0.038; 0.037 |\n",
+    "| 7 | 0.060 | 0.058; 0.060; 0.081; 0.054; 0.055; 0.065; 0.047 |\n",
+    "| 8 | 0.046 | 0.042; 0.051; 0.030; 0.053; 0.040; 0.051; 0.057; 0.042 |\n",
+    "| 9 | 0.041 | 0.041; 0.053; 0.041; 0.037; 0.052; 0.030; 0.054; 0.030; 0.030 |\n",
+    "\n",
+    "&rarr; Độ dài khoá có **Average Index** cao nhất là 7, giống với Kasiski test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.26"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Dan nên chuyển hộp, vì\n",
+    "- Gọi $Y\\in\\{1,2,3\\}$ là hộp chứa phần thưởng của chương trình\n",
+    "- Giả sử Dan chọn hộp $X \\in \\{1,2,3\\}$\n",
+    "- Monty Hall mở 1 trong 2 hộp trống ra $\\rightarrow$ chỉ còn 1 hộp trống và 1 hộp có phần thưởng, ta có 2 trường hợp sau\n",
+    "    - $X=Y$ (xác suất là $\\frac{1}{3}$) $\\rightarrow$ nếu đổi thì không trúng nữa\n",
+    "    - $X$ khác $Y$ (xác suất là $\\frac{2}{3}$) $\\rightarrow$ nếu đổi thì trúng\n",
+    "\n",
+    "$\\rightarrow$ Xác suất trúng khi đổi hộp là $\\frac{2}{3}$ còn xác suất trúng khi không đổi hộp là $\\frac{1}{3}$"
    ]
   }
  ],
