--- a/chapter5_solution.ipynb
+++ b/chapter5_solution.ipynb
@@ -63,6 +63,23 @@
     "  B = 2e_1^3\n",
     "  \\end{cases} \\rightarrow 4A^3+27B^2=4(-27e_1^6)+27(4e_1^6)=0$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Chứng minh theo chiều xuôi.**\n",
+    "\n",
+    "Từ Viet cho phương trình bậc 3, thế $e_3=-e_1-e_2$ vào phương trình $4A^3+27B^2=0$ thì ta được $4(e_1e_2-(e_1+e_2)^2)^3+27e_1^2e_2^2(e_1+e_2)^2=0$\n",
+    "\n",
+    "$\\Leftrightarrow 4e_1^6+12e_1^5e_2-3e_1^4e_2^2-26e_1^3e_2^3-3e_1^2e_2^4+ 12e_1e_2^5 + 4e_2^6 = 0$ $(*)$\n",
+    "\n",
+    "Do tồn tại ít nhất 2 trong 3 nghiệm trùng nhau $\\rightarrow$ phương trình trên sẽ rút gọn được về dạng $(2e_1+e_2)(e_1+2e_2)(e_1-e_2)=0$\n",
+    "\n",
+    "Thật vậy, $(*) \\Leftrightarrow (2e_1+e_2)^2(e_1+2e_2)^2(e_1-e_2)^2 = 0$\n",
+    "\n",
+    "Vậy nếu $2e_1+e_2=0$ thì $e_1=e_3$, $e_1+2e_2=0$ thì $e_2=e_3$, $e_1-e_2=0$ thì $e_1=e_2$. Cho nên ít nhất 2 trong 3 nghiệm trùng nhau"
+   ]
   }
  ],
  "metadata": {
