--- a/chapter5_solution.ipynb
+++ b/chapter5_solution.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "from tabulate import tabulate"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,11 +91,144 @@
     "\n",
     "Vậy nếu $2e_1+e_2=0$ thì $e_1=e_3$, $e_1+2e_2=0$ thì $e_2=e_3$, $e_1-e_2=0$ thì $e_1=e_2$. Cho nên ít nhất 2 trong 3 nghiệm trùng nhau"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a).\n",
+      "         0       [1, 2]    [1, 3]    [4, 0]\n",
+      "------  ------  --------  --------  --------\n",
+      "0       0       [1, 2]    [1, 3]    [4, 0]\n",
+      "[1, 2]  [1, 2]  [4, 0]    0         [1, 3]\n",
+      "[1, 3]  [1, 3]  0         [4, 0]    [1, 2]\n",
+      "[4, 0]  [4, 0]  [1, 3]    [1, 2]    0\n",
+      "\n",
+      "\n",
+      "(b).\n",
+      "         0       [2, 1]    [2, 6]    [3, 1]    [3, 6]    [6, 0]\n",
+      "------  ------  --------  --------  --------  --------  --------\n",
+      "0       0       [2, 1]    [2, 6]    [3, 1]    [3, 6]    [6, 0]\n",
+      "[2, 1]  [2, 1]  [3, 6]    0         [2, 6]    [6, 0]    [3, 1]\n",
+      "[2, 6]  [2, 6]  0         [3, 1]    [6, 0]    [2, 1]    [3, 6]\n",
+      "[3, 1]  [3, 1]  [2, 6]    [6, 0]    [3, 6]    0         [2, 1]\n",
+      "[3, 6]  [3, 6]  [6, 0]    [2, 1]    0         [3, 1]    [2, 6]\n",
+      "[6, 0]  [6, 0]  [3, 1]    [3, 6]    [2, 1]    [2, 6]    0\n",
+      "\n",
+      "\n",
+      "(c).\n",
+      "         0       [0, 4]    [0, 7]    [3, 4]    [3, 7]    [4, 0]    [8, 4]    [8, 7]    [9, 2]    [9, 9]\n",
+      "------  ------  --------  --------  --------  --------  --------  --------  --------  --------  --------\n",
+      "0       0       [0, 4]    [0, 7]    [3, 4]    [3, 7]    [4, 0]    [8, 4]    [8, 7]    [9, 2]    [9, 9]\n",
+      "[0, 4]  [0, 4]  [9, 2]    0         [8, 7]    [9, 9]    [8, 4]    [3, 7]    [4, 0]    [3, 4]    [0, 7]\n",
+      "[0, 7]  [0, 7]  0         [9, 9]    [9, 2]    [8, 4]    [8, 7]    [4, 0]    [3, 4]    [0, 4]    [3, 7]\n",
+      "[3, 4]  [3, 4]  [8, 7]    [9, 2]    [8, 4]    0         [9, 9]    [0, 7]    [3, 7]    [4, 0]    [0, 4]\n",
+      "[3, 7]  [3, 7]  [9, 9]    [8, 4]    0         [8, 7]    [9, 2]    [3, 4]    [0, 4]    [0, 7]    [4, 0]\n",
+      "[4, 0]  [4, 0]  [8, 4]    [8, 7]    [9, 9]    [9, 2]    0         [0, 4]    [0, 7]    [3, 7]    [3, 4]\n",
+      "[8, 4]  [8, 4]  [3, 7]    [4, 0]    [0, 7]    [3, 4]    [0, 4]    [9, 2]    0         [9, 9]    [8, 7]\n",
+      "[8, 7]  [8, 7]  [4, 0]    [3, 4]    [3, 7]    [0, 4]    [0, 7]    0         [9, 9]    [8, 4]    [9, 2]\n",
+      "[9, 2]  [9, 2]  [3, 4]    [0, 4]    [4, 0]    [0, 7]    [3, 7]    [9, 9]    [8, 4]    [8, 7]    0\n",
+      "[9, 9]  [9, 9]  [0, 7]    [3, 7]    [0, 4]    [4, 0]    [3, 4]    [8, 7]    [9, 2]    0         [8, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def elliptic_fp(a, b, p):\n",
+    "    ec_all = []\n",
+    "    ec_points = [0]\n",
+    "\n",
+    "    for x in range(p):\n",
+    "        # Tính y^2\n",
+    "        y_square = (pow(x, 3, p) + (a * x % p) + (b % p)) % p\n",
+    "\n",
+    "        # Kiểm tra tồn tại y sinh ra y^2\n",
+    "        ok = 0\n",
+    "        for i in range(p):\n",
+    "            if pow(i, 2, p) == y_square:\n",
+    "                ok = 1\n",
+    "                break\n",
+    "\n",
+    "        if ok == 0:\n",
+    "            continue\n",
+    "\n",
+    "        ec_points.append([x, i])\n",
+    "        if i != 0: ec_points.append([x, p - i])\n",
+    "\n",
+    "    ec_all.append(ec_points)\n",
+    "    for i in range(1, len(ec_points)):\n",
+    "        temp = ec_points.copy()\n",
+    "        for j in range(i, len(ec_points)):\n",
+    "            if i == j and ec_points[i][1] != 0:\n",
+    "                x0 = ec_points[i][0]\n",
+    "                y0 = ec_points[i][1]\n",
+    "                lamda = ((3 * pow(x0, 2) + a) * pow(2 * y0, -1, p)) % p\n",
+    "                v = (y0 - lamda * x0) % p\n",
+    "                x_res = (pow(lamda, 2) - 2 * x0) % p\n",
+    "                y_res = (-(lamda * x_res + v)) % p\n",
+    "                temp[j] = [x_res, y_res]\n",
+    "            elif ec_points[i][0] == ec_points[j][0]:\n",
+    "                temp[j] = 0\n",
+    "            else:\n",
+    "                x0 = ec_points[i][0]\n",
+    "                y0 = ec_points[i][1]\n",
+    "                x1 = ec_points[j][0]\n",
+    "                y1 = ec_points[j][1]\n",
+    "                lamda = ((y1 - y0) * pow(x1 - x0, -1, p)) % p\n",
+    "                v = (y0 - lamda * x0) % p\n",
+    "                x_res = (pow(lamda, 2) - x0 - x1) % p\n",
+    "                y_res = (-(lamda * x_res + v)) % p\n",
+    "                temp[j] = [x_res, y_res]\n",
+    "        ec_all.append(temp)\n",
+    "    \n",
+    "    for i in range(len(ec_all)):\n",
+    "        for j in range(len(ec_all[i])):\n",
+    "            if i > j:\n",
+    "                ec_all[i][j] = ec_all[j][i]\n",
+    "\n",
+    "    col = []\n",
+    "    for i in range(len(ec_points)):\n",
+    "        col.append([ec_points[i]])\n",
+    "\n",
+    "    for i in range(len(ec_all)):\n",
+    "        ec_all[i] = [ec_points[i]] + ec_all[i]\n",
+    "\n",
+    "    return tabulate(ec_all, headers = ec_points)\n",
+    "\n",
+    "print(\"(a).\\n\", elliptic_fp(1, 2, 5))\n",
+    "print(\"\\n\\n(b).\\n\", elliptic_fp(2, 3, 7))\n",
+    "print(\"\\n\\n(c).\\n\", elliptic_fp(2, 5, 11))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
