--- a/chapter5_solution.ipynb
+++ b/chapter5_solution.ipynb
@@ -210,6 +210,26 @@
     "print(\"\\n\\n(b).\\n\", elliptic_fp(2, 3, 7))\n",
     "print(\"\\n\\n(c).\\n\", elliptic_fp(2, 5, 11))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Xét $n=is+r$ với $0 \\leq r < s$ và $i \\in \\mathbb{Z}$ thì $Q=nP=(is+r)P=isP+rP=rP$\n",
+    "\n",
+    "Do $Q=n_0P$ có $n_0$ là nghiệm nhỏ nhất tìm được $\\rightarrow r \\geq n_0$. Nếu $r=n_0$ thì coi như hoàn tất, nên ta xét $r>n_0$\n",
+    "\n",
+    "Ta có $Q=rP$ và $Q=n_0P$ nên $(r-n_0)P=O \\rightarrow r-n_0\\geq s \\rightarrow r \\geq s$ (vô lý nếu $r>n_0$)\n",
+    "\n",
+    "Vậy $r=n_0$ và $n=is+n_0$"
+   ]
   }
  ],
  "metadata": {
