--- a/chapter5_solution.ipynb
+++ b/chapter5_solution.ipynb
@@ -230,6 +230,67 @@
     "\n",
     "Vậy $r=n_0$ và $n=is+n_0$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). (24, 69)\n",
+      "(b). (485, 573)\n",
+      "(c). (1068, 1540)\n",
+      "(d). (243, 1875)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Double_and_Add(a, b, p, x, y, n):\n",
+    "    r_x = 0\n",
+    "    r_y = 0\n",
+    "    while n > 0:\n",
+    "        if n % 2 != 0:\n",
+    "            if r_x == 0 and r_y == 0:\n",
+    "                r_x = x\n",
+    "                r_y = y\n",
+    "            elif r_x == x and r_y != y:\n",
+    "                r_x = 0\n",
+    "                r_y = 0\n",
+    "            elif r_x == x and r_y == y:\n",
+    "                lamda = ((3 * pow(x, 2) + a) * pow(2 * y, -1, p)) % p\n",
+    "                v = (y - lamda * x) % p\n",
+    "                x_res = (pow(lamda, 2) - 2 * x) % p\n",
+    "                y_res = (-(lamda * x_res + v)) % p\n",
+    "                r_x, r_y = x_res, y_res\n",
+    "            else:\n",
+    "                lamda = ((r_y - y) * pow(r_x - x, -1, p)) % p\n",
+    "                v = (y - lamda * x) % p\n",
+    "                x_res = (pow(lamda, 2, p) - r_x - x) % p\n",
+    "                y_res = (-(lamda * x_res + v)) % p\n",
+    "                r_x, r_y = x_res, y_res\n",
+    "        lamda = ((3 * pow(x, 2) + a) * pow(2 * y, -1, p)) % p\n",
+    "        v = (y - lamda * x) % p\n",
+    "        x_res = (pow(lamda, 2) - 2 * x) % p\n",
+    "        y_res = (-(lamda * x_res + v)) % p\n",
+    "        x, y = x_res, y_res\n",
+    "        n = n // 2\n",
+    "    return r_x, r_y\n",
+    "\n",
+    "print(\"(a).\", Double_and_Add(23, 13, 83, 24, 14, 19))\n",
+    "print(\"(b).\", Double_and_Add(143, 367, 613, 195, 9, 23))\n",
+    "print(\"(c).\", Double_and_Add(1828, 1675, 1999, 1756, 348, 11))\n",
+    "print(\"(d).\", Double_and_Add(1541, 1335, 3221, 2898, 439, 3211))"
+   ]
   }
  ],
  "metadata": {
